# tunetrees

./: .biomeignore  .copilotignore  .dockerignore  .env.compose_constants_tt1dd  .env.example  .env.local.example  .env.local.template  .env.prod.template  .env.production.example  .env.sonar.template  .env.staging.template  .eslintignore  .gitignore  .npmrc  .prettierignore  .project  AGENTS.md  AI_IMPLEMENTATION_SUMMARY.md  ANONYMOUS_USER_IMPLEMENTATION_SUMMARY.md  ANONYMOUS_USER_TESTING_GUIDE.md  ARCHITECTURE.md  CACHED_DATA_IMMEDIATE_DISPLAY_FIX.md  CACHE_IMPLEMENTATION_GUIDE.md  CHECKBOX_FIX_ANALYSIS.md  CLAUDE.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CLOUDFLARE_DEPLOYMENT_SETUP.md  COLUMN_PERSISTENCE_FIX.md  COMPONENT_USAGE_EXAMPLES.md  CORS_FIX_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SETUP_SUMMARY.md  DEPLOYMENT_UX_FIXES_JAN12.md  Dockerfile  ENVIRONMENT_SETUP.md  ENV_SETUP_QUICKSTART.md  FIX_SUMMARY.md  GITHUB_ACTIONS_SECRETS.md  GOAL_ALGORITHM_FIX_SUMMARY.md  GRID_STYLING_FIX.md  (+89 more)
.github/: copilot-instructions.md  dependabot.yml
Diagrams/: postgre_playlist.erd
__notes/: e2e-fail.md
_notes/: AAA_ABOUT.md  AI_IMPLEMENTATION_SUMMARY.md  LIGHTHOUSE_ISSUES.md  PHASE_2_COMPLETE.md  PHASE_COMPLETION_LOG.md  PLAYLIST_MODAL_UI_IMPROVEMENTS.md  PR-405-CATALOG-SYNC-DEFERRAL-FIX.md  README-tune-editor-tests.md  SHADCN_MIGRATION_README.md  SUPABASE_AUTH_SYNC_IMPLEMENTATION.md  avatar-picker-implementation-complete.md  branstorm-drizzlesync-pwa-sync.md  catalog-grid-advanced-features.md  catalog-grid-fixes-empty-data-toolbar.md  catalog-grid-integration-complete.md  ci-testing-setup.md  clear-pwa-cache-steps.md  combined-filter-dropdown-tune-count-debug.md  compound-rule-tune-filtering.md  context-transfer-firefox-scroll-fixes-complete.md  context-transfer-issue-358.md  database-fixes-part2.md  (+122 more)
(+1722 files in other folders)
