[build-system]
requires = ["setuptools>=67.4.0", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "tunetrees"
version = "0.1.0"
description = "TuneTrees: Tune Repertoire Practice Assistant"
authors = [{ name = "Scott Boag", email = "sboag@tunetrees.com" }]
dependencies = [
    "anyio ~= 3.7.0",
    "beautifulsoup4 ~= 4.12.2",
    "black ~= 24.1.0",
    "build ~= 0.10.0",
    "click ~= 8.1.3",
    "fastapi ~= 0.112.2",
    "fsrs ~= 3.1.0",
    "h11 ~= 0.14.0",
    "httpx ~= 0.27.2",
    "idna ~= 3.4",
    "inflect ~= 7.3.1",
    "iniconfig ~= 2.0.0",
    "mypy-extensions ~= 1.0.0",
    "packaging ~= 23.1",
    "pathspec ~= 0.11.1",
    "pip >= 23.1.2",
    "platformdirs ~= 3.5.3",
    "pluggy ~= 1.5.0",
    "pydantic ~= 2.8.2",
    "pyproject_hooks ~= 1.0.0",
    "pytest ~= 8.2.2",
    "PyYAML ~= 6.0",
    "python-dotenv >= 1.0.1",
    "setuptools ~= 67.4.0",
    "sniffio ~= 1.3.0",
    "soupsieve ~= 2.4.1",
    "SQLAlchemy ~= 2.0.35",
    "sqlparse ~= 0.4.4",
    "sqlacodegen-v2 ~= 0.1.4",
    "starlette ~= 0.38.4",
    "typing_extensions ~= 4.12.2",
    "uvicorn ~= 0.22.0",
    "jinja2 ~= 3.1.2",
    "python-multipart ~= 0.0.6",
    "supermemo2 >= 3.0.1",
    "attrs ~= 23.1.0",
    "tabulate ~= 0.9.0",
    "matplotlib ~= 3.9.1",
]

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    alembic/versions
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests", "integration_tests"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
exclude = [
    "alembic/versions/*.py", # Exclude auto-generated migration files
]
